# color-sorting-cli

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pylintrc  pyproject.toml  requirements.txt  ruff.toml
.github/: CODEOWNERS
.github/workflows/: test.yml
demo/: colors.ase  colors.txt  colors_file_original.ase  colors_hillbert_sorted.txt  colors_hsl.txt  show_colors.py
docs/: Apple CLR Color Palette Format Spec.md
harmony/: __init__.py  color_factories.py  commands.py  constants.py  data_access.py  main.py
harmony/color_sorting/: commands.py  constants.py
harmony/convertions/: __init__.py  calculators.py  hsl_to_rgb_converter.py  rgb_to_hsl_converter.py
harmony/core/: __init__.py  abc.py  calculation_models.py  command_utils.py  constants.py  core_utils.py  db_models.py  exceptions.py  interfaces.py  math_utils.py  models.py  utils.py
harmony/core_services/: __init__.py  color_readers.py  css_readers.py  file_readings.py  plain_text_readings.py  services.py  writing_strategies.py
harmony/data_access/: adapters.py  loggers.py  store.py
harmony/from_image_reading/: commands.py  constants.py  services.py
harmony/from_svg_reading/: commands.py  constants.py
harmony/harmony/: adapters.py  constants.py  main.py
harmony/resources/: color-names.csv  color-names.json
harmony/service_layer/: ase_writing.py  clr_writing.py  png_writing.py  services.py
harmony/to_ase_convertion/: commands.py  constants.py  services.py
scripts/: coverage.sh  format.sh  lint.sh  run.sh  test.sh
tests/: helpers.py
tests/resources/: correct.ase
(+64 files in other folders)
