[tool.poetry]
name = "harmony"
version = "1.0.1"
description = "CLI for sorting colors"
authors = ["Lucas Calegario <lucas.c.calegario@outlook.com>"]
readme = "README.md"

[tool.poetry.scripts]
harmony = "harmony.harmony.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = ">=0.6.1, <0.7.0"
rich = ">=12.6.0, <12.7.0"
Pillow = ">=9.4.0, <9.5.0"
pydantic = ">=1.10.5, < 1.11.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.3.1"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
